<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.tjhsst.etimer.MainActivity">


    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/slider"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/sense"
        android:id="@+id/sense"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#000000"
        android:background="#00000000"
        android:layout_weight=".7"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/scramble"
        android:id="@+id/scramble"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#000000"
        android:background="#00000000"
        android:layout_weight="2.5"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:text="@string/timer"
        android:gravity="center"
        android:textSize="80sp"
        android:padding="25dp"
        android:textColor="#000000"
        android:background="#00000000"
        android:id="@+id/timer"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/avg5"
        android:background="#DDDDDD"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/avg5"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="#AAAAAA"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/time1"
            android:background="#00000000"
            android:text="@string/time1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/time2"
            android:background="#00000000"
            android:text="@string/time2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/time3"
            android:background="#00000000"
            android:text="@string/time3"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/time4"
            android:background="#00000000"
            android:text="@string/time4"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/time5"
            android:background="#00000000"
            android:text="@string/time5"/>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:text="@string/reset"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:id="@+id/reset"
        android:background="#000000"/>



</LinearLayout>
